# se3-world-model

./: README.md  evaluate.py  make_video.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
conf/: config.yaml
scripts/: generate_sapien_data.py
src/se3_world_model/: components.py  dataset.py  forces.py  layers.py  loss.py  model.py  train.py
src/se3_world_model/tests/: __init__.py  test_model.py
tests/: test_model.py
